--- a/styles.css
+++ b/styles.css
@@ -109,13 +109,13 @@ a {
     height: 40px;
     width: 120px;
     margin: 2px;
-    z-index: 10000;
 }
 
 .nav-item .icons .sociaIcon img{
-    height: 40px;
-    width: 40px;
-    z-index: -990;
+    height: 28px;
+    margin-top: 5px;
+    width: 28px;
+    border-radius: 50%;
 }
 
 .ring{
@@ -248,7 +248,7 @@ a {
     width: 800px;
     text-align: center;
     line-height: 25px;
-    font-size: 16px;
+    font-size: 12px;
     padding: 25px;
     font-weight: bolder;
 }
@@ -276,8 +276,12 @@ a {
 .about .aboutLeft{
     display: flex;
     flex-direction: column;
-    line-height: 25px;
+    width: 800px;
     text-align: center;
+    line-height: 25px;
+    font-size: 12px;
+    padding: 25px;
+    font-weight: bolder;
     
 }
 
@@ -309,9 +313,9 @@ a {
 
 
 .blurred {
-  background-image: url('images/backgrounds/back1.jpeg');
-  object-fit: cover;
-    background-attachemnt: fixed;
+    background-image: url('images/backgrounds/back1.jpeg');
+    object-fit: cover;
+    background-attachment: fixed;
     background-size: cover;
     display: flex;
     align-items: center;
@@ -358,16 +362,24 @@ a {
     padding: 30px;
     background-image: url('images/backgrounds/back4.jpeg');
     background-size:100vw;
-    background-repeat: no-repeat;
+    background-repeat: space;
     background-attachment: fixed;
     border-top: 2px solid black;
     font-family: "Play",sans-serif;
+    height: 800px;
+}
+
+.features .featureTitle{
+  font-size: 20px;
+  text-align: center;
+  font-weight: bolder;
+  color: #fff;
 }
 
 .featureCat{
     display: flex;
     flex-direction: column;
-    margin:10px;
+    margin:30px;
     justify-content: space-between;
     align-items: center;
 }
@@ -375,7 +387,7 @@ a {
 .featureCat1, .featureCat2{
     display: flex;
     flex-direction: row;
-    margin:20px;
+    
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -383,13 +395,21 @@ a {
 .cat{
     width: 300px;
     height: 300px;
-    background-color: red;
-    padding: 10px;
+    background-color: grey;
+    padding: 20px;
     margin: 30px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    border: 1px solid rgb(76, 94, 94);
+    box-shadow: 6px 4px rgb(76, 94, 94);;
+}
+
+.cat p{
+  color: #fff;
+  font-weight: bold;
+  font-size: 15px;
 }
 
 .cat img{
@@ -397,6 +417,10 @@ a {
     height: 230px;
 }
 
+.innerCat{
+  background-color: red;
+  width:250px;
+}
 
 
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,500);
@@ -407,10 +431,11 @@ a {
 
 
 .slider {
-    background: url('images/backgrounds/back3.jpeg') no-repeat;
-    background-attachemnt: fixed;
-    background-size: cover;
-  height: 800px;
+  background: url('images/backgrounds/back3.jpeg') no-repeat;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  height: 650px;
   position: relative;
   overflow: hidden;
   display: -webkit-box;
@@ -484,7 +509,7 @@ a {
 .slider__contents {
   height: 100%;
   margin-bottom: 50px;
-  padding: 2rem;
+  padding: 4rem;
   text-align: center;
   display: -webkit-box;
   display: -webkit-flex;
@@ -544,9 +569,15 @@ a {
   margin: 2rem 0 1rem;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
   text-transform: uppercase;
+  font-style: italic;
+  font-size: 30px;
+  color: #fff;
 }
 .slider__txt {
-  color: #999;
+  color: #fff;
+  font-size: 12px;
+  font-weight: bolder;
+  width: 900px;
   margin-bottom: 3rem;
   max-width: 300px;
 }
@@ -554,13 +585,16 @@ a {
 .slider__contents .slider__skills{
     display:flex;
     flex-direction: column;
-    
+    text-align: center;
+    align-items: center;
 }
 
 .slider__skills .active{
     display:flex;
     flex-direction: column;
     text-align: center;
+    color: #fff;
+    font-size: 12px;
 }
 
 .slider__skills .active .activeInner{
@@ -571,7 +605,9 @@ a {
 .slider__skills .passive{
     display:flex;
     flex-direction: column;
-    text-align: center;
+    text-align: center; 
+    color: #fff;
+    font-size: 12px;
 }
 
 .slider__skills .passive .passiveInner{
@@ -585,12 +621,14 @@ a {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    text-align: center;
+    line-height: 15px;
 }
 
 
 
 .counter .container {
-    color: #333;
+    color: #fff;
     margin: 0 auto;
     text-align: center;
   }
@@ -639,6 +677,39 @@ a {
     }
   }
 
+  .partners{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: red;
+    align-items: center;
+    padding: 20px;
+    background: url('images/backgrounds/back3.jpeg') no-repeat;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+  }
+
+  .PartnersContent{
+    display:flex;
+    flex-direction: column;
+  }
+
+  .row1, .row2{
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .row1 img{
+    width: 200px;
+    height: 200px;
+  } 
+  
+  .row2 img{
+    width: 200px;
+    height: 200px;
+  }
   footer{
     display: flex;
     flex-direction: row;
@@ -651,6 +722,9 @@ a {
     border-bottom: 3px solid black;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    color: #fff;
+    font-size: 10px;
+    text-align: center;
 
 }
 
@@ -690,6 +764,13 @@ a {
     align-items: center;
     height: 50px;
     width: 50px;
+}
+
+.footerCenter .sociaIcon img{
+  height: 28px;
+  margin-top: 5px;
+  width: 28px;
+  border-radius: 50%;
 }
 
 
@@ -732,7 +813,11 @@ a {
       flex-direction: column;
       justify-content: space-between;
       align-items: center;
-      line-height: 15px;
+      line-height: 25px;
+      font-size: 18px;
+      text-align: center;
+      font-weight: bolder;
+      color: #fff;
   }
 
   .roadmap .roadmapCon{
@@ -886,7 +971,7 @@ a {
     background-color: white;
   
     position: relative;
-  
+    line-height: 20px;
     border-radius: 6px;
     background-color: rgba(0,0,0,0.6);
   
