--- a/styles.css
+++ b/styles.css
@@ -395,13 +395,13 @@ a {
 .cat{
     width: 300px;
     height: 300px;
-    background-color: grey;
     padding: 20px;
     margin: 30px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    background-color: grey;
     border: 1px solid rgb(76, 94, 94);
     box-shadow: 6px 4px rgb(76, 94, 94);;
 }
@@ -684,10 +684,7 @@ a {
     background-color: red;
     align-items: center;
     padding: 20px;
-    background: url('images/backgrounds/back3.jpeg') no-repeat;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
+    
   }
 
   .PartnersContent{
@@ -710,6 +707,19 @@ a {
     width: 200px;
     height: 200px;
   }
+
+  .partCont{
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    background-color: black;
+    border-radius: 50%;
+    margin: 10px;
+  }
+
+
+
   footer{
     display: flex;
     flex-direction: row;
