--- a/styles.css
+++ b/styles.css
@@ -17,12 +17,18 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    
 }
 
 html {
     font-size: 62.5%;
     font-family: 'Roboto', sans-serif;
+}
+
+html{
+  background-image: url('images/backgrounds/back4.jpeg');
+  background-size:100vw;
+  background-repeat: space;
+  background-attachment: fixed;
 }
 
 li {
@@ -70,7 +76,7 @@ a {
     margin: 5px auto;
     -webkit-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
-    background-color: #101010;
+    background-color: goldenrod;
 }
 
 .nav-menu {
@@ -470,7 +476,14 @@ a {
 
 
 .slider__contents .sliderLeft{
-    width: 400px;
+    width: 600px;
+    background: url('images/backgrounds/roadmap.jpeg') no-repeat;
+    border-radius: 50%;
+    background-repeat: no-repeat;
+    
+    background-size: cover;
+    height: 650px;
+    
 }
 
 .slider__contents .sliderRight{
@@ -492,7 +505,7 @@ a {
   margin: 2rem 0 1rem;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
   text-transform: uppercase;
-  color: goldenrod !important;
+  color: #fff !important;
   font-style: italic;
   font-size: 30px;
   color: #fff;
@@ -567,10 +580,10 @@ a {
   background-size: cover;
 }
 .contentContainer {
-  background-image: url('resources/backs/[GetPaidStock.com]-61b6f2d1436dd.jpg');
+  background-image: url('images/backgrounds/back4.jpeg');
   color: goldenrod !important;
   padding:20px;
-  max-width:350px;
+  max-width:550px;
   min-width:150px;
   margin:15vh auto;
   border-radius:10px;
@@ -580,20 +593,24 @@ a {
 #my-pie-chart-container {
   display: flex;
   align-items: center;
+  width: 450px;
+  height: 350px;
 }
 
 #my-pie-chart {
-  background: conic-gradient(brown 0.00%, black 0.00% 0.55%, blue 0.55% 6.08%, green 6.08% 13.68%, yellow 13.68% 23.27%, orange 23.27% 40.47%, red 40.47%);
+  background: conic-gradient(pink 0.00% 4.75%, blue 4.75% 8.50%, green 8.08% 13.68%, yellow 13.68% 23.27%, orange 23.27% 40.47%, red 40.47%);
   border-radius: 50%;
-    width: 150px;
-    height: 150px;
+  width: 450px;
+  height: 350px;
 }
 
 #legenda {
-  margin-left: 20px;
+  margin-left: 10px;
   background-color: white;
   padding: 5px;
   color: black;
+  width: 290px;
+  height: 210px;
   font-size: 10px;
 }
 
@@ -603,8 +620,9 @@ a {
 }
 
 .entry-color {
-    height: 10px;
-    width: 10px;
+    height: 20px;
+    width: 20px;
+    margin: 5px;
 }
 
 .entry-text {
@@ -632,19 +650,14 @@ a {
 }
 
 #color-black {
-  background-color: black;
+  background-color: pink;
 }
 
 #color-brown {
   background-color: brown;
 }
 
-html{
-  background-image: url('images/backgrounds/back4.jpeg');
-  background-size:100vw;
-  background-repeat: space;
-  background-attachment: fixed;
-}
+
 
 .features{
     display: flex;
@@ -1229,7 +1242,205 @@ border-image: linear-gradient(to right, transparent, #34495e, transparent) 1;
     li span {
       font-size: calc(3.375rem * var(--smaller));
     }
+
+    .vidSec{
+      font-size: 4px;
+    }
+
+    .vidSec .overlay .title{
+      font-size: 24px;
+      margin-bottom: -30px;
+    }
+
+    .vidSec .overBtn{
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+      justify-content: center;
+    }
+
+    .vidSec .overBtn .btn2{
+      margin-bottom: 200px;
+    }
+
+    .royalWrap{
+      background-image: url('resources/backs/[GetPaidStock.com]-61b6f2d1436dd.jpg');
+      background-repeat: repeat-y;
+      color: goldenrod !important;
+      font-weight: bolder;
+      background-size:150vw;
+      text-align: center;
+      font-size: 12px;
+    }
+
+    .royalInfo{
+      display: flex;
+      flex-direction: column-reverse;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .about{
+      display: flex;
+      flex-direction: column;
+    }
+
+    .about .aboutRight{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .slider__contents{
+      display: flex;
+      flex-direction: column;
+    }
+
+    .slider__contents .active{
+      display: none;
+    }
+
+    .slider__contents .passive{
+      display: none;
+    }
+
+    .slider__contents .sliderLeft{
+      width: 100px;
+    }
+
+  .slider__contents .sliderRight{
+      width: 100px;
+    }
+  
+  .slider__contents:nth-child(2) .sliderLeft{
+      width: 200px;
+    }
+  
+  .slider__contents:nth-child(2) .sliderRight{
+      width: 400px;
+  
   }
+
+  .slider__contents:nth-child(2),.slider__contents:nth-child(4) {
+    display: flex;
+    flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+  .slider__contents img {
+      width: 300px;
+      height: 300px;
+  }
+
+#gan{
+  margin-right: 150px !important;
+}
+.slider__contents .sliderLeft{
+  width: 300px;
+  background: url('images/backgrounds/roadmap.jpeg') no-repeat;
+  border-radius: 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 600px;
+  
+}
+  .tok h1{
+    font-size:14px;
+    padding: 5px;
+  }
+
+  .tok .entry-text{
+    font: size 14px !important;
+    font-weight: bolder;
+  }
+
+  #my-pie-chart-container {
+    display: flex;
+    align-items: center;
+    width: 350px;
+    height: 250px;
+  }
+
+  
+  #my-pie-chart {
+    background: conic-gradient(pink 0.00% 4.75%, blue 4.75% 8.50%, green 8.08% 13.68%, yellow 13.68% 23.27%, orange 23.27% 40.47%, red 40.47%);
+    border-radius: 50%;
+    width: 160px;
+    height: 200px;
+  }
+  
+  #legenda {
+    margin-left: 10px;
+    background-color: white;
+    padding: 5px;
+    color: black;
+    width:170px;
+    height: 130px;
+    font-size: 10px;
+  }
+  
+  .entry {
+    display: flex;
+    align-items: center;
+  }
+  
+  .entry-color {
+      height: 10px;
+      width: 10px;
+      margin: 5px;
+  }
+  
+
+  .features{
+    height: 1700px;
+    margin-bottom: 700px;
+    background-image: url('images/backgrounds/back4.jpeg');
+    background-size :1700px;
+  }
+
+  .featureCat1, .featureCat2{
+    display: flex;
+    flex-direction: column;  
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+
+  .cat{
+    margin-top: 30px;
+  }
+
+
+
+
+  .roadmap .timeline:after{
+    display: none;
+  }
+
+  .roadmap .timeline{
+    width: 400px;
+  }
+
+  .partners .PartnersContent .row1, .row2{
+    display: flex;
+    flex-direction: column;
+  }
+
+  footer{
+    display: flex;
+    flex-direction: column;
+    background-size: 2550px;
+    object-fit: cover;
+  }
+
+  footer .footerRight{
+    margin-top: 15px;
+  }
+
+
+}
 
 
   @media screen and (max-width: 600px) {
