--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,9 @@ a {
     background-size: 1350px;
     border-bottom: 3px solid black;
     background-repeat: no-repeat;
+    position: fixed;
+    z-index: 100;
+    width: 100%;
 
 }
 
@@ -131,7 +134,7 @@ a {
     align-items: center;
     height: 40px;
     width: 120px;
-    margin: 2px;
+    margin-left: 24px;
 }
 
 .nav-item .icons .sociaIcon img{
@@ -1239,6 +1242,10 @@ border-image: linear-gradient(to right, transparent, #34495e, transparent) 1;
       font-size: calc(3.375rem * var(--smaller));
     }
 
+    .header{
+      width: 100%;
+
+    }
     .vidSec{
       font-size: 4px;
     }
@@ -1594,6 +1601,10 @@ border-image: linear-gradient(to right, transparent, #34495e, transparent) 1;
 
 
 @media only screen and (max-width: 768px) {
+
+  header{
+    width: 100;
+  }
     .nav-menu {
         position: fixed;
         left: -100%;
